second try at spacing issue

--- a/css/style.css
+++ b/css/style.css
@@ -342,7 +342,7 @@ section.home {
     }
 
     .home-content h1 {
-        margin-top: 1rem;
+        margin-top: 2rem;
     }
 
     .logo {
